resources/public/css/style.css
.node circle {
    fill: #999;
    /* stroke: steelblue; */
    /* stroke-width: 3px; */
}

.node text { font: 12px sans-serif; }

.node--internal text {
  /* text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff; */
}

.link {
  fill: none;
  stroke: #555;
  stroke-width: 2px;
  stroke-opacity: 0.4;
}

.node--internal circle {
    fill: #555;
}

.node--root text {
    /* stroke: red; */
}

#app {
    width: 100%;
    height: 100%;
}

.svg-container {
    /* display: inline-block; */
    /* position: relative; */
    width: 100%;
    /* padding-bottom: 100%; */
    /* vertical-align: middle; */
    /* overflow: hidden; */
}

/* .svg-content { */
/*     display: inline-block; */
/*     position: absolute; */
/*     top: 0; */
/*     left: 0; */
/* } */

